# ideal

./: .gitignore  CMakeLists.txt  build.sh
.github/workflows/: build_cmake.yml
cmake_modules/: copy-assets.cmake
dependencies/: CMakeLists.txt
dependencies/assimp/: CMakeLists.txt
dependencies/corrade/: CMakeLists.txt
dependencies/efsw/: CMakeLists.txt
dependencies/entt/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/magnum/: CMakeLists.txt
dependencies/magnum-integration/: CMakeLists.txt
dependencies/magnum-plugins/: CMakeLists.txt
dependencies/sdl/: CMakeLists.txt
src/: CMakeLists.txt  MyApplication.cpp  TestModule.cpp  Types.h
src/assets/: assets.conf
src/ideal/: AbstractModuleLoader.h  HotModuleLoader.cpp  HotModuleLoader.h  IdealApplication.cpp  IdealApplication.h  ModuleLoader.cpp  ModuleLoader.h
src/modules/: GameModule.cpp  ImGuiStyleModule.cpp  TestModule.conf
src/utils/corrade/: AbstractModule.h
src/utils/imgui/: ImGuiStyle.hpp
