# This is the most minimal set of features which still make Sdl2Application
# work. If you need something from these, remove the setting. The SDL_AUDIO
# option (and SDL_DLOPEN) should not be needed either as Magnum doesn't use it,
# but if it's disabled it causes linker errors. Needs further investigation.
set(SDL_ATOMIC OFF CACHE BOOL "" FORCE)
set(SDL_CPUINFO OFF CACHE BOOL "" FORCE)
set(SDL_FILE ON CACHE BOOL "" FORCE) # Needed for Mac OSX
set(SDL_FILESYSTEM OFF CACHE BOOL "" FORCE)
set(SDL_HAPTIC OFF CACHE BOOL "" FORCE)
set(SDL_LOCALE OFF CACHE BOOL "" FORCE)
set(SDL_POWER OFF CACHE BOOL "" FORCE)
set(SDL_RENDER OFF CACHE BOOL "" FORCE)
set(SDL_SENSOR OFF CACHE BOOL "" FORCE)
set(SDL_THREADS OFF CACHE BOOL "" FORCE)
set(SDL_TIMERS OFF CACHE BOOL "" FORCE)

set(SDL_AUDIO ON CACHE BOOL "" FORCE)
set(PULSEAUDIO ON CACHE BOOL "" FORCE)
set(PULSEAUDIO_SHARED OFF CACHE BOOL "" FORCE)
set(ALSA OFF CACHE BOOL "" FORCE)
set(ALSA_SHARED OFF CACHE BOOL "" FORCE)
set(JACK OFF CACHE BOOL "" FORCE)
set(JACK_SHARED OFF CACHE BOOL "" FORCE)
set(DISKAUDIO OFF CACHE BOOL "" FORCE)
set(DISKAUDIO_SHARED OFF CACHE BOOL "" FORCE)
set(SNDIO OFF CACHE BOOL "" FORCE)
set(SNDIO_SHARED OFF CACHE BOOL "" FORCE)
set(DUMMYAUDIO OFF CACHE BOOL "" FORCE)
set(DUMMYAUDIO_SHARED OFF CACHE BOOL "" FORCE)
set(ESD OFF CACHE BOOL "" FORCE)
set(ESD_SHARED OFF CACHE BOOL "" FORCE)
set(ARTS OFF CACHE BOOL "" FORCE)
set(ARTS_SHARED OFF CACHE BOOL "" FORCE)
set(NAS OFF CACHE BOOL "" FORCE)
set(NAS_SHARED OFF CACHE BOOL "" FORCE)
set(OSS OFF CACHE BOOL "" FORCE)
set(OSS_SHARED OFF CACHE BOOL "" FORCE)

set(SDL_JOYSTICK ON CACHE BOOL "" FORCE)
set(JOYSTICK_VIRTUAL ON CACHE BOOL "" FORCE)

set(SDL_LOADSO ON CACHE BOOL "" FORCE)
set(SDL_VIDEO ON CACHE BOOL "" FORCE)
set(VIDEO_VULKAN OFF CACHE BOOL "" FORCE)
set(VIDEO_DUMMY OFF CACHE BOOL "" FORCE)
set(VIDEO_OPENGL ON CACHE BOOL "" FORCE)
set(VIDEO_OPENGLES OFF CACHE BOOL "" FORCE)
set(VIDEO_WAYLAND OFF CACHE BOOL "" FORCE)
set(VIDEO_WAYLAND_QT_TOUCH OFF CACHE BOOL "" FORCE)
set(VIDEO_KMSDRM OFF CACHE BOOL "" FORCE)
set(KMSDRM_SHARED OFF CACHE BOOL "" FORCE)
set(VIDEO_RPI OFF CACHE BOOL "" FORCE)
set(VIDEO_VIVANTE OFF CACHE BOOL "" FORCE)

set(LIBSAMPLERATE ON CACHE BOOL "" FORCE)
set(LIBSAMPLERATE_SHARED ON CACHE BOOL "" FORCE)

set(SDL_EVENTS ON CACHE BOOL "" FORCE)

# This assumes you want to have SDL as a static library. If not, set SDL_STATIC
# to OFF instead.
set(SDL_DLOPEN ON CACHE BOOL "" FORCE)
set(SDL_SHARED OFF CACHE BOOL "" FORCE)
set(SDL_STATIC ON CACHE BOOL "" FORCE)

#ADD_SUBDIRECTORY(SDL2 EXCLUDE_FROM_ALL)
fetchcontent_declare(
  sdl
  GIT_REPOSITORY https://github.com/libsdl-org/SDL
  GIT_TAG 25f9ed87ff6947d9576fc9d79dee0784e638ac58 # v2.0.16
)
#FetchContent_MakeAvailable(SDL)
fetchcontent_getproperties(sdl)
if(NOT sdl_POPULATED)
  message(STATUS "Fetching SDL v${SDL_VERSION}")
  fetchcontent_populate(sdl)
  add_subdirectory(${sdl_SOURCE_DIR} ${sdl_BINARY_DIR} EXCLUDE_FROM_ALL)
endif()
